create and delete

--- a/FinalProjectUAS/app/src/main/res/values/strings.xml
+++ b/FinalProjectUAS/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">FinalProjectUAS</string>
+    <string name="app_name">Data Barang</string>
+    <string name="action_settings">Settings</string>
 </resources>
